--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,21 @@
 {
   "version": 2,
-  "rootDirectory": "apps/marketing"
+  "builds": [
+    {
+      "src": "apps/marketing/package.json",
+      "use": "@vercel/next"
+    }
+  ],
+  "rootDirectory": "apps/marketing",
+  "env": {
+    "NEXT_PUBLIC_SUPABASE_URL": "@supabase_url",
+    "NEXT_PUBLIC_SUPABASE_ANON_KEY": "@supabase_anon_key"
+  },
+  "build": {
+    "env": {
+      "SUPABASE_URL": "@supabase_url",
+      "SUPABASE_ANON_KEY": "@supabase_anon_key",
+      "SUPABASE_SERVICE_ROLE_KEY": "@supabase_service_role_key"
+    }
+  }
 }
